applications/productivity/freshrss/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freshrss
spec:
  hostnames:
    - rss.quido.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: freshrss
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
